Menu alignement fixed

--- a/airscore/static/css/frontend.css
+++ b/airscore/static/css/frontend.css
@@ -215,10 +215,6 @@ div.hidden {
   margin: 1rem 0 1rem 0;
 }
 
-.collapse {
-  margin-bottom: 1rem;
-}
-
 /* footer */
 
 footer {
